# SqLoss

./: README.md
MMC/: createTrainfile.py  create_kfolds.py  eval.py
SqLoss/: CMakeLists.txt  CSVwriter.h  FileReader.cpp  LinearModel.cpp  LinearModel.h  SNode.cpp  SNode.h  common.h  common_string_symbol.h  seql_learn.cpp  seql_learn.h  seql_predictor.cpp  seql_predictor.h  str2node_string_symbol.cpp
SqLoss/experiments/: CMakeLists.txt  Dream5.cpp  MMC.cpp  SeqlClassification.cpp  SeqlRegression.cpp
dream5/: compareDreamtool.py  createEvalfile.sh  prepare_dream5_data.sh  run_all_dream.sh
simulation/: generateToySequenceReg.py
simulation/othermethods/: SotA_methods.py  alphabetsize
